tests/paczka1/fuzzy1/97432208.err
Error in line 16: IoPxjMJjl A99 36,8
Error in line 13: z2AssRDS A947 94,5
Error in line 23: MIoRN7HXD3V A947 97,1
Error in line 37: LBeWroZUIw A7k k8,7
Error in line 14: LBeWroZUIw A947 290,0
